http-gate-testing/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gate-service
  namespace: gate-service
  labels:
    app: gate-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: gate-service
